make it prettier

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Forgetn't</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="">
 </head>
 <body>
     <h1>To-Do List - Be better than yesterday</h1>
     <div class="main">
         <input id="userinput" type="text" placeholder="Enter your tasks here...">
-        <button id="enter" class="">Add Task</button>
+        <button id="enter" class="btn">Add Task</button>
         <p class="counter">Your points: </p>
         <div id="points">0</div>
     </div>
