--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>To-Do List - Be better than yesterday</h1>
     <div class="main">
-        <input id="userinput" type="text" placeholder="Enter your tasks here...">
+        <input id="userinput" type="text" placeholder="Type here...">
         <button id="enter" class="btn">Add Task</button>
         <p class="counter">Your points: </p>
         <div id="points">0</div>
