--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          For each removed task you will lose 5 points.
           If you reach 5,000 points, you can call yourself a master of 
           discipline. However, if you continuously have a negative score 
-          you have to work on your procrastination.
+          you have to work on yourself.
     </p>
 
 	<ul id="tasksList">
